# PowerVIBe

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLIBKML.cmake  swigruntime.h
data/GWHPtables/: L_database.txt  L_database_extended.txt  databaseEgon.txt
data/TransmissionCoefficient/: default_transmission_coefficients_tirol.csv  default_transmission_coefficients_tirol_san.csv
scripts/: CMakeLists.txt  PowerVIBe.py
scripts/PowerVIBe/: __init__.py  climatemodel.py  createdae.py  creategwhp.py  exportkml.py  groundsourceheatpumps.py  heatingcoolingtransmission.py  heatingdemand.py  importDAE.py  simpleheatingdemand.py  testcomponent.py  transcoef.py
src/: CMakeLists.txt  ExportKML.cpp  ExportKML.h  advancedparceling.cpp  advancedparceling.h  annualemploymentcontrol.cpp  annualemploymentcontrol.h  annualhouseholdcontroltotals.cpp  annualhouseholdcontroltotals.h  createshadows.cpp  createshadows.h  createsinglefamilyhouses.cpp  createsinglefamilyhouses.h  distancefield.cpp  distancefield.h  edgetofaces.cpp  edgetofaces.h  extrudebuildings.cpp  extrudebuildings.h  geometry.cpp  geometry.h  heatingdemand.cpp  heatingdemand.h  householdplacementdtu.cpp  householdplacementdtu.h  modernbuilding.cpp  modernbuilding.h  placegwhp.cpp  placegwhp.h  placehouseholds.cpp  placehouseholds.h  placejobs.cpp  placejobs.h  placejobsdtu.cpp  placejobsdtu.cpp.autosave  placejobsdtu.h  placejobsdtu.h.autosave  powervibe.cpp  regionaltemperatur.cpp  regionaltemperatur.h  (+8 more)
unit-tests/: CMakeLists.txt  unittestsdmpowervibe.cpp  unittestsdmpowervibe.h
